--- a/experimental/templates/cluster/2nic/f5_bigip_cluster_2_nic.yaml
+++ b/experimental/templates/cluster/2nic/f5_bigip_cluster_2_nic.yaml
@@ -24,12 +24,17 @@ parameters:
   f5_cloudlibs_tag:
     type: string
     label: f5 CloudLibs Tag
-    description: Tag that determines version of f5 cloudlibs to use for provisioning. If specified, ensure that hashes are updated for verifyHash.
-    default: v3.1.0
+    description: Tag that determines version of f5 cloudlibs to use for provisioning. If specified, ensure that hashes are valid by either updating scripts/verifyHash or by providing a f5_cloudlibs_verify_hash_url_override value.
+    default: v3.3.0
   f5_cloudlibs_url_override:
     type: string
     label: f5 cloud-libs URL Override
-    description: Alternate URL for f5-cloud-libs package. If not specified, the default GitHub location for f5-cloud-libs will be used.
+    description: Alternate URL for f5-cloud-libs package. If not specified, the default GitHub location for f5-cloud-libs will be used. If version is different from default f5_cloudlibs_tag, ensure that hashes are valid by either updating scripts/verifyHash or by providing a f5_cloudlibs_verify_hash_url_override value.
+    default: None
+  f5_cloudlibs_verify_hash_url_override:
+    type: string
+    label: f5 cloud-libs verifyHash URL Override  
+    description: Alternate URL for verifyHash used to validate f5-cloud-libs package. If not specified, the scripts/verifyHash will be used.
     default: None
   bigip_servers_ntp:
     type: comma_delimited_list
@@ -142,15 +147,15 @@ parameters:
     label: f5 BIG-IP VE VLAN NIC
     description: The NIC associated with the BIG-IP VLAN.
     default: 1.1
-  bigip_vlan_selfip_addresses:
+  bigip_self_ip_addresses:
     type: comma_delimited_list
     label: f5 BIG-IP VE VLAN SelfIP Address
     description: List of self-IP address to associate with the BIG-IP VLAN.
-  bigip_vlan_cidr_block:
+  bigip_self_cidr_block:
     type: string
     label: f5 BIG-IP VE VLAN CIDR Block
     description: CIDR Block for the BIG-IP SelfIP address.
-  bigip_vlan_allow:
+  bigip_self_port_lockdown:
     type: comma_delimited_list
     label: f5 BIG-IP VE VLAN Allow Services
     description: Optional list of <service:port> lockdown settings for the VLAN. If no value is supplied, default is used.
@@ -177,7 +182,7 @@ parameters:
     default: true
     label: f5 BIG-IP Cluster Save On Auto Sync
     description: Enable saving on config-sync auto-sync
-  bigip_cluster_selfip_addresses:
+  bigip_cluster_self_ip_addresses:
     type: comma_delimited_list
     label: f5 BIG-IP Cluster Self-IP Addresses
     description: Non-floating SelfIP Addresses for clustering
@@ -190,6 +195,7 @@ parameter_groups:
   - use_config_drive
   - f5_cloudlibs_tag
   - f5_cloudlibs_url_override
+  - f5_cloudlibs_verify_hash_url_override
   - bigip_servers_ntp
   - bigip_servers_dns
 - label: BIG-IP Credentials
@@ -218,16 +224,16 @@ parameter_groups:
   - bigip_vlan_mtu
   - bigip_vlan_tag
   - bigip_vlan_nic
-  - bigip_vlan_selfip_addresses
-  - bigip_vlan_cidr_block
-  - bigip_vlan_allow
+  - bigip_self_ip_addresses
+  - bigip_self_cidr_block
+  - bigip_self_port_lockdown
 - label: BIG-IP Cluster
   parameters:
   - bigip_device_group
   - bigip_sync_type
   - bigip_auto_sync
   - bigip_save_on_auto_sync
-  - bigip_cluster_selfip_addresses
+  - bigip_cluster_self_ip_addresses
 
 resources:
   mgmt_security_group:
@@ -262,6 +268,7 @@ resources:
           use_config_drive: { get_param: use_config_drive }
           f5_cloudlibs_tag: { get_param: f5_cloudlibs_tag }
           f5_cloudlibs_url_override: { get_param: f5_cloudlibs_url_override }
+          f5_cloudlibs_verify_hash_url_override: { get_param: f5_cloudlibs_verify_hash_url_override}
           bigip_servers_ntp: { get_param: bigip_servers_ntp }
           bigip_servers_dns: { get_param: bigip_servers_dns }
           bigip_os_ssh_key: { get_param: bigip_os_ssh_key }
@@ -272,7 +279,6 @@ resources:
           bigip_modules: { get_param: bigip_modules }
           external_network: { get_param: external_network }
           mgmt_network: { get_param: mgmt_network }
-          mgmt_security_group_name: { get_param: mgmt_security_group_name }
           mgmt_network_ips: { get_attr: [device_mgmt_ports, show, fixed_ips, 0, ip_address] }
           mgmt_network_portids: { get_attr: [device_mgmt_ports, show, id] }
           network_vlan_security_group_id: { get_attr: [network_vlan_security_group, data_security_group_id] }
@@ -283,12 +289,12 @@ resources:
           bigip_vlan_mtu: { get_param: bigip_vlan_mtu }
           bigip_vlan_tag: { get_param: bigip_vlan_tag }
           bigip_vlan_nic: { get_param: bigip_vlan_nic }
-          bigip_vlan_selfip_addresses: { get_param: bigip_vlan_selfip_addresses }
-          bigip_vlan_cidr_block: { get_param: bigip_vlan_cidr_block }
-          bigip_vlan_allow: { get_param: bigip_vlan_allow }
+          bigip_self_ip_addresses: { get_param: bigip_self_ip_addresses }
+          bigip_self_cidr_block: { get_param: bigip_self_cidr_block }
+          bigip_self_port_lockdown: { get_param: bigip_self_port_lockdown }
           bigip_default_gateway: { get_param: bigip_default_gateway }
           bigip_device_names: { get_attr: [device_mgmt_ports, show, dns_assignment, 0, fqdn] }
-          bigip_cluster_selfip_addresses: { get_param: bigip_cluster_selfip_addresses }
+          bigip_cluster_self_ip_addresses: { get_param: bigip_cluster_self_ip_addresses }
           bigip_auto_sync : { get_param: bigip_auto_sync }
           bigip_save_on_auto_sync : { get_param: bigip_save_on_auto_sync }
 outputs:
