--- a/experimental/configs/onboarding_libs.yaml
+++ b/experimental/configs/onboarding_libs.yaml
@@ -7,11 +7,11 @@ parameters:
     type: string
     label: f5 CloudLibs Tag
     description: Tag that determines version of cloudlibs to use. If specified, ensure that hashes are updated for verifyHash
-    default: v3.1.0
+    default: v3.3.0
   cloudlibs_url_override:
     type: string
     label: f5 cloud-libs URL Override
-    description: Alternate URL for f5-cloud-libs package. If not specified, the default GitHub location for f5-cloud-libs will be used. 
+    description: Alternate URL for f5-cloud-libs package. If not specified, the default GitHub location for f5-cloud-libs will be used. If version is different from default f5_cloudlibs_tag, ensure that hashes are valid by either updating scripts/verifyHash or by providing a f5_cloudlibs_verify_hash_url_override value. 
     default: None
 resources:
   onboarding_libs:
