--- a/experimental/templates/cluster/2nic/f5_bigip_cluster_2_nic_env.yaml
+++ b/experimental/templates/cluster/2nic/f5_bigip_cluster_2_nic_env.yaml
@@ -21,12 +21,12 @@ parameters:
   network_vlan_subnet: data_subnet
   network_vlan_security_group_name: Data_secgroup_2_NIC_cluster
   bigip_vlan_nic: "1.1"
-  bigip_vlan_selfip_addresses:
+  bigip_self_ip_addresses:
     - 10.1.9.155
     - 10.1.9.154
-  bigip_vlan_cidr_block: 10.1.9.0/24
+  bigip_self_cidr_block: 10.1.9.0/24
   bigip_vlan_mtu: 1400
-  bigip_cluster_selfip_addresses:
+  bigip_cluster_self_ip_addresses:
     - 10.1.9.145
     - 10.1.9.144
 
