clean-up and additional constraints - update READMEs with new information - add constraint for nic count - add wait handle for post-onboard

--- a/experimental/configs/override_default_config.yaml
+++ b/experimental/configs/override_default_config.yaml
@@ -18,10 +18,20 @@ resources:
     type: OS::Heat::RandomString
     properties:
       length: 10
+      character_classes:
+        - class: letters
+          min: 3
+        - class: digits
+          min: 3
   random_password_root:
     type: OS::Heat::RandomString
     properties:
       length: 10
+      character_classes:
+        - class: letters
+          min: 1
+        - class: digits
+          min: 1
   override_default_config:
     type: OS::Heat::SoftwareConfig
     properties:
