more README updates and default opt for heat signal

--- a/experimental/templates/standalone/nnic/f5_bigip_standalone_n_nic.yaml
+++ b/experimental/templates/standalone/nnic/f5_bigip_standalone_n_nic.yaml
@@ -199,8 +199,8 @@ parameter_groups:
   - bigip_servers_dns
 - label: BIG-IP nNIC Provisioning
   parameters:
-  - bigip_os_ssh_key
-  - bigip_admin_pwd
+  - bigip_nic_count
+  - bigip_last_nic_index
 - label: BIG-IP Credentials
   parameters:
   - bigip_os_ssh_key
